Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101423

tst_QPlainTextEdit::ensureCursorVisibleOnInitialShow is crashing on Android

    XMLWordPrintable

Details

    • Android
    • 71b3d18ea7 (qt/qtbase/dev) 71b3d18ea7 (qt/tqtc-qtbase/dev) fb99988eb6 (qt/qtbase/6.3) fb99988eb6 (qt/tqtc-qtbase/6.3) 18dcdc389e (qt/qtbase/6.2) 18dcdc389e (qt/tqtc-qtbase/6.2)

    Description

      tst_QPlainTextEdit::ensureCursorVisibleOnInitialShow() is crashing when running on Android.

      The crash does not make the CI fail, because androidtestrunner simply decides that the whole test execution is complete.

      Stack trace from Android Studio is not very informative as well:

      art_sigsegv_fault 0x00000000e588e138
      art::FaultManager::HandleFault(int, siginfo*, void*) 0x00000000e588e482
      art::SignalChain::Handler(int, siginfo*, void*) 0x00000000024bcf16
      __restore_rt 0x00000000ea03fa8c
      QThreadData* std::__ndk1::__cxx_atomic_load<QThreadData*>(std::__ndk1::__cxx_atomic_base_impl<QThreadData*> const*, std::__ndk1::memory_order) atomic:970
      

      If I try to reproduce the test as a standalone application, everything works fine and does not crash.

      Update: running only this test-case does not crash. So it can be some side-effect from the previous tests, or a problem with testlib.

       

       

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-101423
          # Subject Branch Project Status CR V

          Activity

            People

              qtandroidteam Qt Android Team
              ivan.solovev Ivan Solovev
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews